# nano-svg-android

./: .gitignore  README.md  build-aar.sh  gradle.properties  settings.gradle.kts
svg-android/: build.gradle.kts  consumer-rules.pro
svg-android/src/androidTest/kotlin/com/ingenuity/svg/: SVGParserTest.kt
svg-android/src/main/cpp/: CMakeLists.txt  svg_jni.cpp
svg-android/src/main/kotlin/com/ingenuity/svg/: ParsedSVG.kt  SVGParser.kt  SVGRawData.kt  SVGRenderer.kt
